# LegacyPrintDlg

./: .gitignore  Binary-Readme.txt  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  UnifiedPrintDialog_Modern.reg  build.bat  cpplint.cfg  exec.bat  main.cpp  makefile  memo.txt  pch.cpp  pch.h  res.rc  res.rh  resource.h  resource.rc  version.h
assets/: UnifiedPrintDialog_Legacy.reg
docs/: Doxyfile
installer/: License.rtf  Setup.wxs  WixUI_Alt_ja-jp.wxl  makefile
src/: CMakeLists.txt  Doxyfile  LegacyPrintDlg.manifest  build.bat  cpplint.cfg  exec.bat  main.cpp  pch.cpp  pch.h  res.rc  res.rh  resource.h  resource.rc  version.h
